--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "hbs": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
-    "partials": "^0.1.0"
+    "mysql": "^2.18.1"
   }
 }
